--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
+    <script defer src="selectCalendar.js"></script>
 </head>
 <body>
     <header>
@@ -18,8 +20,25 @@
 
     
     <main>
-        <div class="calendar">
-            insert calendar soon
+        <div class="calendar-settings">
+            <div class="calendar">
+                <div class="day-header">S</div>
+                <div class="day-header">M</div>
+                <div class="day-header">T</div>
+                <div class="day-header">W</div>
+                <div class="day-header">T</div>
+                <div class="day-header">F</div>
+                <div class="day-header">S</div>
+
+                <div class="day"></div>
+                <div class="day"></div>
+                <div class="day"></div>
+                <div class="day"></div>
+                <div class="day"></div>
+                <div class="day"></div>
+                <div class="day"></div>
+
+            </div>
 
         </div>
 
@@ -75,7 +94,8 @@
     </main>
 
     <footer>
-        Made for DeerHacks hackathon
+        <p>Made for DeerHacks 2023 hackathon</p>
+        <p>David Kochanski, [] []</p>
     </footer>
 
 </body>
