--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-
-    <script defer src="script/selectCalendar.js"></script>
-    <script defer src="script/makeCalendar.js"></script>
 </head>
 <body>
     <header>
@@ -143,5 +140,8 @@
         <p>David Kochanski, [], []</p>
     </footer>
 
+    <script defer src="script/selectCalendar.js"></script>
+    <script defer src="script/makeCalendar.js"></script>
+    <script defer src="script/createEvent.js"></script>
 </body>
 </html>
