--- a/index.html
+++ b/index.html
@@ -75,8 +75,6 @@
                             <option value="1900">7:00 PM</option>
                             <option value="1930">7:30 PM</option>
                             <option value="2000">8:00 PM</option>
-                            <option value="2030">8:30 PM</option>
-                            <option value="2100">9:00 PM</option>
                         </select>
                     </div>
         
@@ -108,8 +106,6 @@
                             <option value="1900">7:00 PM</option>
                             <option value="1930">7:30 PM</option>
                             <option value="2000">8:00 PM</option>
-                            <option value="2030">8:30 PM</option>
-                            <option value="2100">9:00 PM</option>
                         </select>
                     </div>
     
@@ -154,7 +150,7 @@
         <p>David Kochanski, Sabih Sarowar, Anirudh Mahesh</p>
     </footer>
 
-    <script defer src="selectCalendar.js"></script>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="selectCalendar.js"></script>
+    <!-- <script type="module" src="script.js"></script> -->
 </body>
 </html>
