--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 
             <div class="user-calendar-settings">
-                <h3></h3>
+                <h3 class="margin-bottom-user"></h3>
                 <div id="user-calendar">
                     
                 </div>
@@ -135,7 +135,7 @@
             </div>
 
             <div class="group-calendar">
-                <h3>Group Schedule for This Event</h3>
+                <h3 class="margin-bottom-group">Group Schedule for This Event</h3>
                 <div id="group-calendar">
                     
                 </div>
