--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </div>
 
             <div class="group-calendar">
-                <h3 class="margin-bottom-group">Group Schedule</h3>
+                <h3 class="margin-bottom-user">Group Schedule</h3>
                 <div id="group-calendar">
                     
                 </div>
